packages/related/test/tests/test_plan_execution/logs/snapshots/node/jsenv_tests_output_error.txt
------------ 1 execution to run -------------
node (node_worker_thread@<mock>)
---------------------------------------------

✖ error.spec.js [<mock>/<mock>] 1/1 (all failed)
--------------- error ----------------
1 | throw new Error("here");
         ^
Error: here
  at /Users/d.maillard/dev/jsenv/jsenv-core/packages/related/test/tests/test_plan_execution/logs/node_client/error.spec.
js:1:7
--------------------------------------

------------------ summary ------------------
1 execution: all failed
duration: <mock>
---------------------------------------------